[tool.poetry]
name = "moon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flwr = {extras = ["simulation"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]
torch = "1.7.1"
torchvision = "0.8.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
